@@ -3,38 +3,39 @@ package com.openstock.dev.searchservice.kafka.subscribers;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.openstock.dev.searchservice.kafka.messagemodel.ProductMessageModel;
 import com.openstock.dev.searchservice.model.Product;
-import com.openstock.dev.searchservice.service.ProductService;
+import com.openstock.dev.searchservice.service.ElasticSearchService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.kafka.annotation.KafkaListener;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class MessageSubscriber {
-   private final  ProductService productService;
+    private final ElasticSearchService elasticSearchService;
 
-    public MessageSubscriber(ProductService productService) {
-        this.productService = productService;
+    public MessageSubscriber(ElasticSearchService elasticSearchService) {
+        this.elasticSearchService = elasticSearchService;
     }
+
 
     @KafkaListener(topics = "OS_PRODUCT_TOPIC", groupId = "OS-Product", containerFactory = "kafkaListenerFactory")
     public void consumeMessage(List<LinkedHashMap<String, Object>> messageInfoDTOList) {
-        log.info("Message received for update saving:##### " + messageInfoDTOList);
+        log.info("Message received for update saving: {}", messageInfoDTOList);
         ObjectMapper mapper = new ObjectMapper();
 
-        // Convert each LinkedHashMap to Person object
+        // Convert each LinkedHashMap to object
         List<Product> toSave = messageInfoDTOList.stream()
                 .map(map -> mapper.convertValue(map, ProductMessageModel.class)) // Convert LinkedHashMap to ProductMessageModel
                 .filter(Objects::nonNull) // Filter out any null values if conversion failed
                 .map(data -> Product.builder()
                         .productID(data.getProductID())
+                        .master(data.getMaster())
                         .country(data.getCountry())
+                        .countryFlag(data.getCountryFlag())
                         .type(data.getType())
                         .subType(data.getSubType())
                         .reg(data.getReg())
@@ -48,10 +49,10 @@ public class MessageSubscriber {
                         .info(data.getInfo())
                         .img(data.getImg())
                         .build())
-                .collect(Collectors.toList()); // Collect to a List of Product entities
+                .toList(); // Collect to a List of Product entities
 
-        productService.saveProducts(toSave); // Assuming saveProducts can handle a list of products
-        log.info("Processed and saved products: " + toSave.size());
+        elasticSearchService.saveProducts(toSave); // Assuming saveProducts can handle a list of products
+        log.info("Processed and saved products: {}", toSave.size());
     }
 
 }
